--- a/project/package.json
+++ b/project/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "Trust Ihemebiri",
@@ -14,6 +15,16 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mysql2": "^3.11.3"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.11.0",
+    "chai": "^5.1.1",
+    "eslint": "^9.11.0",
+    "globals": "^15.9.0",
+    "mocha": "^10.7.3"
   }
 }
